[package]
name = "quicksilver-utils-async"
description = "Utilities for projects using https://github.com/ryanisaacg/quicksilver"
version = "0.1.0"
authors = ["John P Mayer Jr <john.p.mayer.jr@gmail.com>"]
edition = "2018"
license = "MIT/Apache-2.0"
readme = "Readme.md"
repository = "https://github.com/johnpmayer/quicksilver-utils"

[package.metadata.docs.rs]
all-features = true

[features]
default = []
stdweb = ["std_web"]
web-sys = ["web_sys", "js-sys", "wasm-bindgen"]

[dependencies]
futures-util = { version = "0.3.1", default-features = false, features = ["alloc"] }
std_web = { version = "0.4.20", package = "stdweb", features = ["futures-support"], optional = true }
js-sys = { version = "0.3", package = "js-sys", optional = true }
web_sys = { version = "0.3", package = "web-sys", optional = true, features = ["console", "BinaryType", "MessageEvent", "WebSocket"] }
url = "2.1.1"
wasm-bindgen = { version = "0.2.45", optional = true }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
async-std = "1.4.0"
tokio-tungstenite = "0.9.0"

[lib]
name = "quicksilver_utils_async"
path = "src/lib.rs"
