[package]
name = "quicksilver-utils-async"
description = "Utilities for projects using https://github.com/ryanisaacg/quicksilver"
version = "0.3.0"
authors = ["John P Mayer Jr <john.p.mayer.jr@gmail.com>"]
edition = "2018"
license = "MIT/Apache-2.0"
readme = "Readme.md"
repository = "https://github.com/johnpmayer/quicksilver-utils"

[package.metadata.docs.rs]
all-features = true

[features]
default = []
stdweb = ["std_web"]
web-sys = ["web_sys", "js-sys", "wasm-bindgen"]

[dependencies]
bytes = "0.5.4" # FIXME: tighten this to match hyper
futures-util = { version = "0.3.1", default-features = false, features = ["alloc"] }
futures-io = "0.3.1"
std_web = { version = "0.4.20", package = "stdweb", features = ["futures-support"], optional = true }
js-sys = { version = "0.3", package = "js-sys", optional = true }
web_sys = { version = "0.3", package = "web-sys", optional = true, features = ["BinaryType", "MessageEvent", "WebSocket"] }
url = "2.1.1"
wasm-bindgen = { version = "0.2.45", optional = true }
log = "0.4"
surf = "1.0.3"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
async-std = "1.4.0"
async-tls = "0.7.0"
soketto = "0.3.2"
rustls = "0.17.0"
rustls-native-certs = "0.3.0"

[lib]
name = "quicksilver_utils_async"
path = "src/lib.rs"
